--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
 
                 </div>
-                <div class="col-lg-6">
+                <div class="col-12 col-lg-6">
                     <img src="images/header-bike.png" alt="" srcset="">
                 </div>
             </div>
@@ -61,8 +61,64 @@
         </div>
     </header>
     <!-- header end -->
-    <!-- main start -->
+    <!-- main featured-bike portion start -->
     <main>
+        <section>
+            <h1 class="d-flex justify-content-center fw-bold my-3 pt-5">Fetured Bikes 2021</h1>
+            <h5><span class="d-flex justify-content-center best-bike-color">Best Bike Collection</span></h5>
+            <div class="d-flex">
+                <div class="col-12 col-lg-4">
+                    <img class="img-fluid p-5 grayscale" src="images/feature-bike.jpg" alt="" srcset="">
+
+                </div>
+
+                <div class="col-12 col-lg-4">
+                    <img class="img-fluid p-5" src="images/feature-bike.jpg" alt="" srcset="">
+
+                </div>
+                <div class="col-12 col-lg-4">
+                    <img class="img-fluid p-5 grayscale" src="images/feature-bike.jpg" alt="" srcset="">
+
+                </div>
+            </div>
+        </section>
+        <!-- main featured-bike portion end -->
+        <!-- happy client part start -->
+        <section>
+            <h1 class="d-flex justify-content-center fw-bold my-5 pt-5"> Happy <span class="best-bike-color ms-3">
+                    Clients Says</span></h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/user-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/user-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/user-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+
+        </section>
 
     </main>
     <!-- main end -->
