--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/0332d4dc4e.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -16,7 +17,7 @@
     <!-- header start -->
     <header>
         <div class="container-fluid">
-            <div class="row d-flex align-items-center">
+            <div class="bg-color d-flex align-items-center">
                 <div class="col-lg-6 ps-5" id="color">
                     <p class="h5">Computer-controlled digital transistorized with electronic advance</p>
                     <h1 class="h1 fw-bold my-3">Honda CBR 300R</h1>
@@ -53,7 +54,7 @@
                     </div>
 
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-lg-6">
                     <img src="images/header-bike.png" alt="" srcset="">
                 </div>
             </div>
@@ -63,7 +64,7 @@
     <!-- header end -->
     <!-- main featured-bike portion start -->
     <main>
-        <section>
+        <section class="">
             <h1 class="d-flex justify-content-center fw-bold my-3 pt-5">Fetured Bikes 2021</h1>
             <h5><span class="d-flex justify-content-center best-bike-color">Best Bike Collection</span></h5>
             <div class="d-flex">
@@ -84,39 +85,167 @@
         </section>
         <!-- main featured-bike portion end -->
         <!-- happy client part start -->
-        <section>
+        <section class="container row-cols-1">
             <h1 class="d-flex justify-content-center fw-bold my-5 pt-5"> Happy <span class="best-bike-color ms-3">
                     Clients Says</span></h1>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-3 g-5 mb-5">
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="images/user-1.png" class="card-img-top" alt="...">
+                    <div class="card text-center">
+                        <img src="images/user-1.png" class="card-img-top px-4 d-block img-fluid my-3 " alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h4 class="card-text">Slate helps you see how<br>
+
+                                many more days you need<br>
+
+                                to work to reach your financial <br>
+
+                                goal for the month and year.</h3>
+                                <h5 class="h5-color my-3">Regina Miles
+                                </h5>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <h5>Banker</h5>w
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="images/user-2.png" class="card-img-top" alt="...">
+                    <div class="card text-center">
+                        <img src="images/user-2.png" class="card-img-top px-4 d-block img-fluid my-3 " alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a short card.</p>
+                            <h4 class="card-text">Slate helps you see how<br>
+
+                                many more days you need<br>
+
+                                to work to reach your financial <br>
+
+                                goal for the month and year.</h3>
+                                <h5 class="h5-color my-3">Regina Miles</h5>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <h5>Banker</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="images/user-3.jpg" class="card-img-top" alt="...">
+                    <div class="card text-center">
+                        <img src="images/user-1.png" class="card-img-top px-4 d-block img-fluid my-3" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                            <h4 class="card-text">Slate helps you see how<br>
+
+                                many more days you need<br>
+
+                                to work to reach your financial <br>
+
+                                goal for the month and year.</h3>
+                                <h5 class="h5-color my-3">Regina Miles</h5>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <h5>Banker</h5>
                         </div>
                     </div>
                 </div>
+
+
+        </section>
+        <section>
+            <h1 class="d-flex justify-content-center fw-bold my-5 pt-5">Frequently Asked <span
+                    class="best-bike-color ms-3">Question</span></h1>
+            <div class="container-fluid">
+                <div class="d-flex">
+                    <div class="col-lg-6">
+                        <img src="images/faq.png" alt="" srcset="">
+                    </div>
+
+                    <div class="col-lg-6">
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+
+                    </div>
 
         </section>
 
