--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
 
                                 to work to reach your financial <br>
 
-                                goal for the month and year.</h3>
-                                <h5 class="h5-color my-3">Regina Miles
-                                </h5>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                                <h5>Banker</h5>w
+                                goal for the month and year.</h4>
+                            <h5 class="h5-color my-3">Regina Miles
+                            </h5>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <h5>Banker</h5>w
                         </div>
                     </div>
                 </div>
@@ -153,6 +153,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
 
         </section>
@@ -246,16 +247,79 @@
                         </select>
 
                     </div>
+                </div>
+            </div>
 
+        </section>
+        <!-- bonus part-1 start -->
+        <section class="container row-cols-1">
+            <h1 class="d-flex justify-content-center fw-bold my-5 pt-5">Latest News</h1>
+
+
+            <div class="row row-cols-1 row-cols-md-3 g-5 mb-5">
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="images/bike-1.png" class="card-img-top px-4 d-block img-fluid my-3 " alt="...">
+                        <div class="card-body">
+                            <h2>Ducati XDIAVEL S-73</h2>
+                            <p>This bike has record-breaking selling experience.It uses less oil and more speedy.</p>
+                            <button type="button" class="btn-color px-5 py-3 rounded-2 my-2" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Read more..
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="images/bike-2.png" class="card-img-top px-4 d-block img-fluid my-3 " alt="...">
+                        <div class="card-body">
+                            <h2>Motorcycles & Scooters</h2>
+                            <p>This bike has record-breaking selling experience.It uses less oil and more speedy.</p>
+                            <button type="button" class="px-5 py-3 rounded-2 my-2" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Read more...
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="images/bike-3.png" class="card-img-top px-4 d-block img-fluid my-3 " alt="...">
+                        <div class="card-body">
+                            <h2>2021 Honda CBR500R</h2>
+                            <p>This bike has record-breaking selling experience.It uses less oil and more speedy.</p>
+                            <button type="button" class="px-5 py-3 rounded-2 my-2" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Read more...
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
     <!-- main end -->
+    <!-- bonus part-2 start -->
     <!-- footer start -->
     <footer>
-
+        <div class="footer-img">
+            <img src="images/145-1451765_education-quality-footer-decorative-graphic-footer-image-for.png" alt="">
+        </div>
+        <h4>Join with us for cyclone offer</h4>
+        <div class="social-links">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+        <div class="copyright">
+            <p>Copyright<i class="far fa-copyright"></i>2022.All copyright reserved.</p>
+        </div>
     </footer>
     <!-- footer end -->
+    <!-- bonus part-2 end -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
